--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Temps de parole</title>
   </head>
   <body>
-    <canvas class="zdog-canvas" width="240" height="240"></canvas>
+    <canvas id="zdog-canvas-1" width="240" height="240"></canvas>
+    <canvas id="zdog-canvas-2" width="240" height="240"></canvas>
+    <script src="https://unpkg.com/zdog@1/dist/zdog.dist.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
