--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
     <title>Temps de parole</title>
   </head>
   <body>
-    <canvas id="zdog-canvas-1" width="240" height="240"></canvas>
-    <canvas id="zdog-canvas-2" width="240" height="240"></canvas>
+    <canvas id="zdog-canvas" width="900" height="600"></canvas>
     <script src="https://unpkg.com/zdog@1/dist/zdog.dist.min.js"></script>
     <script src="script.js"></script>
   </body>
