--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <body>
     <canvas id="zdog-canvas" width="1200" height="600"></canvas>
     <script src="https://unpkg.com/zdog@1/dist/zdog.dist.min.js"></script>
+    <script type="text/javascript" src="data.json"></script>
     <script src="script.js"></script>
   </body>
 </html>
