--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon" href="#" />
     <link rel="stylesheet" href="style.css" />
     <title>Temps de parole</title>
   </head>
   <body>
+    <div id="bulle"></div>
+    <div id="annee">blablabla</div>
     <canvas id="zdog-canvas" width="1200" height="600"></canvas>
     <script src="https://unpkg.com/zdog@1/dist/zdog.dist.min.js"></script>
     <script type="text/javascript" src="data.json"></script>
