--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,9 @@
   </head>
   <body>
     <div id="bulle"></div>
-    <div id="annee">blablabla</div>
-    <canvas id="zdog-canvas" width="1200" height="600"></canvas>
+    <div id="annee"></div>
+
+    <canvas id="zdog-canvas" width="1200" height="700"></canvas>
     <script src="https://unpkg.com/zdog@1/dist/zdog.dist.min.js"></script>
     <script type="text/javascript" src="data.json"></script>
     <script src="script.js"></script>
