--- a/test.html
+++ b/test.html
@@ -10,88 +10,28 @@
   </head>
   <body>
     <div id="bulle"></div>
+    <canvas id="myCanvas" width="1200" height="600"></canvas>
     <script>
-            function printYear(year) {
-              setInterval(function () {
-                year = year + 1;
-                document.write(year);
-              }, 2000);
-            }
-            //   function printYear(year) {
-            //     for (let i = 0; i < 10; i++) {
-            //       year = year + 1;
-            //       setInterval(function () {
-            //         document.write(year);
-            //       }, 2000);
-            //     }
-            //   }
-            printYear(2007);
+      // function printYear(year) {
+      //   setInterval(function () {
+      //     year = year + 1;
+      //     document.write(year);
+      //   }, 2000);
+      // }
+      //   function printYear(year) {
+      //     for (let i = 0; i < 10; i++) {
+      //       year = year + 1;
+      //       setInterval(function () {
+      //         document.write(year);
+      //       }, 2000);
+      //     }
+      //   }
+      //printYear(2007);
 
-            //back up:
-            //test animation bulles faitezs en css
-      document.getElementById("bulle").animate(
-        [
-          // keyframes
-          { transform: "scale(2,2)" },
-        ],
-        {
-          // timing options
-          duration: 1000,
-          iterations: Infinity,
-        }
-      );
-
-      //compteur des années des data:
-      //JS:
-      function printYear(year) {
-        setInterval(function () {
-          year = year + 1;
-          document.write(year);
-          document.write(" ");
-          //document.body.innerHTML = " ";
-        }, 2000);
-      }
-
-      // var annee = document.getElementById("annee");
-      // annee.innerHTML = printYear(1995);
-      printYear(1995);
-
-      //en html:
-          <div id="bulle"></div>
-          <div id="annee">blablabla</div>
-
-          //en css:
-          #zdog-canvas {
-        background: #fdb;
-        cursor: move;
-        position: absolute;
-        left: 5px;
-        bottom: 5px;
-        animation-name: animation1;
-        animation-duration: 2s;
-        z-index: -1;
-      }
-
-      body {
-        background-color: #fdb;
-      }
-      #bulle {
-        margin-left: 250px;
-        margin-top: 200px;
-        border-radius: 30px;
-        border: 5px solid #ea0;
-        width: 200px;
-        height: 150px;
-        animation-name: anim;
-        animation-duration: 4s;
-      }
-
-      #annee {
-        background-color: aqua;
-        margin-left: 50%;
-        margin-right: auto;
-        margin-bottom: 20%;
-      }
+      var canvas = document.getElementById("myCanvas");
+      var ctx = canvas.getContext("2d");
+      ctx.font = "30px Arial";
+      ctx.fillText("Hello World", 10, 50);
     </script>
   </body>
 </html>
