--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,12 @@
     <title>Temps de parole</title>
   </head>
   <body>
+    <div id="titre">Evolution du temps de parole à la radio des femmes et des hommes de 1995 à 2019 </div>
     <div id="bulle"></div>
+    <div id="bulleH"></div>
     <div id="annee"></div>
+    <br>
+    <div id="source">Source : INA</div>
 
     <canvas id="zdog-canvas" width="1200" height="700"></canvas>
     <script src="https://unpkg.com/zdog@1/dist/zdog.dist.min.js"></script>
