--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
   </head>
   <body>
     <div id="titre">Evolution du temps de parole à la radio des femmes et des hommes de 1995 à 2019 </div>
-    <div id="bulle"></div>
-    <div id="bulleH"></div>
+    <div id="bulle">
+      <div id="poucentage">%</div>   
+    </div>
+    <div id="bulleH"></div> 
     <div id="annee"></div>
     <br>
     <div id="source">Source : INA</div>
