--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,16 @@
     <title>Temps de parole</title>
   </head>
   <body>
-    <div id="titre">Evolution du temps de parole à la radio des femmes et des hommes de 1995 à 2019 </div>
-    <div id="bulle">
-      <div id="poucentage">%</div>   
+    <div id="titre">
+      Evolution du temps de parole à la radio des femmes et des hommes de 1995 à
+      2019
     </div>
-    <div id="bulleH"></div> 
+    <div id="bulle">
+      <div id="pourcentageF">%</div>
+    </div>
+    <div id="bulleH"><div id="pourcentageH">%</div></div>
     <div id="annee"></div>
-    <br>
+    <br />
     <div id="source">Source : INA</div>
 
     <canvas id="zdog-canvas" width="1200" height="700"></canvas>
