recentrage des elements dans la page web

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="titre">
-      Evolution du temps de parole à la radio des femmes et des hommes de 1995 à
+      Evolution du temps de parole des femmes et des hommes à la radio de 1995 à
       2019
     </div>
     <div id="bulle">
