--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,11 @@
       Evolution du temps de parole des femmes et des hommes à la radio de 1995 à
       2019
     </div>
-    <div id="bulle">
-      <div id="pourcentageF">%</div>
+    <div id="bulle" class= "styleBulle">
+      <div id="pourcentageF" class= "stylePourcentage"></div>
     </div>
-    <div id="bulleH"><div id="pourcentageH">%</div></div>
+    <div id="bulleH" class= "styleBulle">
+      <div id="pourcentageH" class= "stylePourcentage"></div></div>
     <div id="annee"></div>
     <br />
     <div id="source">Source : INA</div>
